--- a/assets/sass/_settings.scss
+++ b/assets/sass/_settings.scss
@@ -8,15 +8,15 @@ throughout this theme's SASS files.
 @import "../vendor/sass/foundation/functions";
 
 // Grayscale colors
-$dark-color: #aaa;
-$medium-color: #ccc;
+$dark-color: #D6E0EB;
+$medium-color: #ebebeb;
 $light-color: #fff;
 
 // Extra colors
 
 // We use these as default colors throughout
-$primary-color: #0000FF;
-$secondary-color: #FF0000;
+$primary-color: #0C4E8B;
+$secondary-color: #C73144;
 $alert-color: #f04124;
 $success-color: #43AC6A;
 $warning-color: #f08a24;
