Some mobile fixes.

--- a/style.css
+++ b/style.css
@@ -3187,12 +3187,6 @@ throughout this theme's SASS files.
   .button.xxlarge-expand {
     width: 100%; } }
 
-.full-width {
-  width: 100%;
-  margin-left: auto;
-  margin-right: auto;
-  max-width: initial; }
-
 @font-face {
   font-family: "weathericons";
   src: url("assets/vendor/fonts/weathericons-regular-webfont.eot");
@@ -4357,6 +4351,9 @@ throughout this theme's SASS files.
   color: #888;
   font-style: italic; }
 
+.no-height {
+  height: 0; }
+
 #services {
   position: relative; }
   #services .fa, #services .wi {
@@ -4382,6 +4379,15 @@ body {
 
 #wrapper {
   background-color: #fff; }
+
+#site-content .row {
+  padding: 0.9375rem 0 0.9375rem 0; }
+
+.full-width {
+  width: 100%;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: initial; }
 
 /*
 Styles single.php.
