--- a/assets/sass/templates/_common.scss
+++ b/assets/sass/templates/_common.scss
@@ -21,6 +21,10 @@ Styles shared among all templates.
   }
 }
 
+.no-height {
+    height: 0;
+}
+
 #services {
     position: relative;
 
@@ -60,4 +64,15 @@ body {
 
 #wrapper {
     background-color: $light-color;
+}
+
+#site-content .row {
+  padding: ( $column-gutter / 2 ) 0 ( $column-gutter / 2 ) 0;
+}
+
+.full-width {
+   width: 100%;
+   margin-left: auto;
+   margin-right: auto;
+   max-width: initial;
 }
