Support for random testimonials on the Home Page. Relies on Gravity Forms and the Testiominal Form being Form ID 1. #5

--- a/assets/sass/templates/_home.scss
+++ b/assets/sass/templates/_home.scss
@@ -19,6 +19,20 @@ body.home {
     }
   }
 
+  #testimonial {
+    .testimonial-copy, .testimonial-copy p {
+      color: #888;
+      font-style: italic;
+      margin: 0;
+    }
+    .testimonial-copy {
+      border-right: 1px solid $gainsboro;
+    }
+    .aligncenter {
+      margin: 0 auto;
+    }
+  }
+
   #home-cta {
 
     padding: 1em;
