--- a/style.css
+++ b/style.css
@@ -4347,10 +4347,6 @@ throughout this theme's SASS files.
   font-style: italic;
   color: #888888; }
 
-.testimonial .testimonial-copy {
-  color: #888;
-  font-style: italic; }
-
 .no-height {
   height: 0; }
 
@@ -4427,6 +4423,17 @@ body.home .page-content {
   @media only screen and (min-width: 40.063em) {
     body.home .page-content {
       margin: 30px 0; } }
+
+body.home #testimonial .testimonial-copy, body.home #testimonial .testimonial-copy p {
+  color: #888;
+  font-style: italic;
+  margin: 0; }
+
+body.home #testimonial .testimonial-copy {
+  border-right: 1px solid #DDDDDD; }
+
+body.home #testimonial .aligncenter {
+  margin: 0 auto; }
 
 body.home #home-cta {
   padding: 1em; }
