Converted Testimonials to utilize AJAX to get around WP Engine RAND limitations. Closes #5

--- a/assets/sass/templates/_home.scss
+++ b/assets/sass/templates/_home.scss
@@ -31,6 +31,12 @@ body.home {
     .aligncenter {
       margin: 0 auto;
     }
+    .testimonial-loading {
+      font-size: 4em;
+    }
+    .testimonial-content {
+      display: none;
+    }
   }
 
   #home-cta {
