Added Mailchimp Widget. Had to manually instatiate to give it extra options not available in the Widget Form. SASS is a bit weird for it due to not having full control over its DOM structure. Closes #12

--- a/assets/sass/templates/_common.scss
+++ b/assets/sass/templates/_common.scss
@@ -69,3 +69,27 @@ body {
    margin-right: auto;
    max-width: initial;
 }
+
+li.widget {
+    list-style: none;
+}
+
+#newsletter {
+
+    .button {
+        background-color: $primary-color;
+        color: $light-color;
+        border: none;
+
+        &:active, &:focus {
+          color: $light-color;
+        }
+
+        &:hover {
+          background-color: transparent;
+          color: $primary-color;
+          border: 3px solid;
+        }
+    }
+
+}
