--- a/assets/sass/templates/_home.scss
+++ b/assets/sass/templates/_home.scss
@@ -20,6 +20,9 @@ body.home {
   }
 
   #testimonial {
+    & > .row {
+        padding: 0 0 0 0;
+    }
     .testimonial-copy, .testimonial-copy p {
       color: #888;
       font-style: italic;
