--- a/style.css
+++ b/style.css
@@ -4438,6 +4438,9 @@ body.home .page-content {
     body.home .page-content {
       margin: 30px 0; } }
 
+body.home #testimonial > .row {
+  padding: 0 0 0 0; }
+
 body.home #testimonial .testimonial-copy, body.home #testimonial .testimonial-copy p {
   color: #888;
   font-style: italic;
