Added background image overlay to the CTA section. Color and background image changes when a new Tab is clicked. Included jquery.addrule.js to accomplish this. #10

--- a/assets/sass/templates/_home.scss
+++ b/assets/sass/templates/_home.scss
@@ -45,6 +45,19 @@ body.home {
   #home-cta {
 
     padding: 1em;
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: relative;
+
+    .overlay:after {
+        content: "";
+        position: absolute;
+        top: 0;
+        left: 0;
+        opacity: 0.75;
+        height: 100%;
+        width: 100%;
+    }
 
     h2 {
         color: #000;
