Made Subscribe button less large. Also made it a Ghost button similar to the rest of the site, which helps it stand out less.

--- a/assets/sass/templates/_home.scss
+++ b/assets/sass/templates/_home.scss
@@ -87,6 +87,16 @@ body.home {
         margin-top: -0.2em;
     }
 
+    .mc_signup_submit {
+
+        text-align: right;
+
+        input {
+            width: auto;
+        }
+
+    }
+
   }
 
 }
