--- a/assets/sass/templates/_common.scss
+++ b/assets/sass/templates/_common.scss
@@ -77,18 +77,19 @@ li.widget {
 #newsletter {
 
     .button {
-        background-color: $primary-color;
-        color: $light-color;
-        border: none;
+        background-color: transparent;
+        color: $primary-color;
+        border: 3px $primary-color solid;
+        text-transform: uppercase;
+        font-weight: bold;
 
         &:active, &:focus {
           color: $light-color;
         }
 
         &:hover {
-          background-color: transparent;
-          color: $primary-color;
-          border: 3px solid;
+          color: $secondary-button-border-hover;
+          border: 3px $secondary-button-border-hover solid;
         }
     }
 
