Minor Typography Changes. Larger Logo. Added some Color to Services buttons on Hover.

--- a/assets/sass/_settings.scss
+++ b/assets/sass/_settings.scss
@@ -22,6 +22,9 @@ $success-color: #43AC6A;
 $warning-color: #f08a24;
 $info-color: #a0d3e8;
 
+$logo-red: #C31A2F;
+$logo-blue: #094C8B;
+
 $body-bg: $light-color;
 
 // We use these to define default font stacks
