--- a/assets/sass/templates/_common.scss
+++ b/assets/sass/templates/_common.scss
@@ -43,6 +43,18 @@ Styles shared among all templates.
       width: 100%;
     }
 
+    .button:hover, .button:hover * {
+        color: $light-color;
+    }
+
+    .columns:nth-child(odd) .button:hover {
+        background-color: $logo-red;
+    }
+
+    .columns:nth-child(even) .button:hover {
+        background-color: $logo-blue;
+    }
+
     .vertical-center {
       @media #{$small-only} {
         margin-top: 0 !important; // Override so it doesn't try to center on small
