Add Footer Widget Support. Dynamically created from Customizer

--- a/assets/sass/static/_footer.scss
+++ b/assets/sass/static/_footer.scss
@@ -7,6 +7,7 @@ The static site footer.
 
 #site-footer {
   margin-top: 30px;
+  background: $medium-color;
 
   .primary-nav {
     background: $medium-color;
