--- a/assets/sass/templates/_home.scss
+++ b/assets/sass/templates/_home.scss
@@ -73,6 +73,10 @@ body.home {
       margin: 0;
     }
 
+    .tabs dd > a, .tabs .tab-title > a {
+        font-family: 'Lora';
+    }
+
   }
 
   #newsletter {
