--- a/assets/sass/static/_header.scss
+++ b/assets/sass/static/_header.scss
@@ -97,6 +97,7 @@ The static site header.
               color: inherit;
               padding: 0.5em 1em;
               border-right: 3px solid $dark-color;
+              font-family: 'Lora';
 
               @media #{$small-only} {
                 display: inline-block;
