--- a/assets/sass/_foundation-extend.scss
+++ b/assets/sass/_foundation-extend.scss
@@ -49,3 +49,17 @@ $xxlarge-up;
     }
   }
 }
+
+// Vertical Align Content
+.valign-center {
+    display: table;
+
+    > .columns {
+        display: table-cell;
+        vertical-align: middle;
+    }
+
+    > .columns, > [class*="column"] + [class*="column"]:last-child {
+        float: none;
+    }
+}
