--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -44,6 +44,7 @@ Version: 0.1.0
 @import "templates/single-post";
 @import "templates/page";
 @import "templates/home";
+@import "templates/realbig-slider";
 
 // Shortcodes
 
